Finished all core values

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,22 +10,43 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Commit to Delivery Excellence</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+           We have a passion for consulting excellence. In all of our projects, we strive to first understand your needs and then deliver on our commitments 100 percent of the time.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Embrace Integrity and Openness</h2>
+        <p>We value strong, positive relationships that are open and honest. This differentiates us and allows us to accomplish much more than we would be able to otherwise.</p>
+        
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Practice Responsible Stewardship</h2>
+        <p>We value stewardship and fiscal accountability and always strive to do more with less. We guard and conserve company resources as if they were our own because it makes good business sense at all times, not just during lean times.</p>
+     
     </div>
+    <div class="col-md-4">
+        <h2>Invest in an Exceptional Culture</h2>
+        <p>We aim to hire and retain talented people from diverse backgrounds who can create a high impact for our clients and internally within our company.</p>
+    </div>
+    <div>
+    <div class="col-md-4">
+        <h2>Ignite Passion for the Greater Good</h2>
+        <p>We take pride in our commitment to improving the world in which we live and actively preserving our environment for future generations. We are steadfast in our devotion to the communities we serve and actively promote employee involvement in community improvement projects.</p>
+    </div>
+     <div>
+    <div class="col-md-4">
+        <h2>Strive to Innovate</h2>
+        <p>We value passion, determination, perseverance, and innovation. We are inspired because we believe in what we are doing and where we are going. We believe in using innovation to remove obstacles and help you succeed.</p>
+    </div>
+         <div>
+    <div class="col-md-4">
+        <h2>Live a Balanced Life</h2>
+        <p>Our employees are our greatest asset. Because of that, we encourage our people to strive for balance in their life, and we monitor projects to ensure our employees have time for family, community and personal interests.</p>
+    </div>
+
+
+    </div>
+         
 </div>
