--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Centric Consulting</h1>
+    <p class="lead">This application is used to help Centric employees embrace the 7 core values.</p>
+    <p><a href="https://centricconsulting.com/" class="btn btn-primary btn-lg">Learn more about centric &raquo;</a></p>
 </div>
 
 <div class="row">
