--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <h1>Centric Consulting</h1>
     <p class="lead">This application is used to help Centric employees embrace the 7 core values.</p>
     <p><a href="https://centricconsulting.com/" class="btn btn-primary btn-lg">Learn more about centric &raquo;</a></p>
+    <h2> The 7 Core Values</h2>
 </div>
 
 <div class="row">
