Big changes to landing page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,12 +2,104 @@
     ViewBag.Title = "Home Page";
 }
 
+
 <div class="jumbotron">
     <h1>Centric Consulting</h1>
     <p class="lead">This application is used to help Centric employees embrace the 7 core values.</p>
     <p><a href="https://centricconsulting.com/" class="btn btn-primary btn-lg">Learn more about centric &raquo;</a></p>
     <h2> The 7 Core Values</h2>
 </div>
+
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+        <li data-target="#myCarousel" data-slide-to="3"></li>
+        <li data-target="#myCarousel" data-slide-to="4"></li>
+        <li data-target="#myCarousel" data-slide-to="5"></li>
+        <li data-target="#myCarousel" data-slide-to="6"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="https://centricconsulting.com/wp-content/uploads/2021/09/CitDev-PP-Dynamics-webinar.jpg" alt="1">
+            <div class="carousel-caption">
+                <h3>Commit to Delivery Excellence</h3>
+                <p>We have a passion for consulting excellence. In all of our projects, we strive to first understand your needs and then deliver on our commitments 100 percent of the time.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="https://centricconsulting.com/wp-content/uploads/2018/07/Homepage_unmatched-consulting-experience-e1611111679393-1680x750.jpg" alt="2">
+            <div class="carousel-caption">
+                <h3>Embrace Integrity and Openness</h3>
+                <p>We value strong, positive relationships that are open and honest. This differentiates us and allows us to accomplish much more than we would be able to otherwise.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="https://centricconsulting.com/wp-content/uploads/2018/07/Career-overlapping-left.jpg" alt="3">
+            <div class="carousel-caption">
+                <h3>Practice Responsible Stewardship</h3>
+                <p>We value stewardship and fiscal accountability and always strive to do more with less. We guard and conserve company resources as if they were our own because it makes good business sense at all times, not just during lean times.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="https://centricconsulting.com/wp-content/uploads/2021/03/CentricConsulting_homepage_footer2.jpg" alt="4">
+            <div class="carousel-caption">
+                <h3>Invest in an Exceptional Culture</h3>
+                <p>We aim to hire and retain talented people from diverse backgrounds who can create a high impact for our clients and internally within our company.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="https://centricconsulting.com/wp-content/uploads/2020/08/shutterstock_1323802778-1.jpg" alt="5">
+            <div class="carousel-caption">
+                <h3>Ignite Passion for the Greater Good</h3>
+                <p>We take pride in our commitment to improving the world in which we live and actively preserving our environment for future generations. We are steadfast in our devotion to the communities we serve and actively promote employee involvement in community improvement projects.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="https://centricconsulting.com/wp-content/uploads/2020/08/shutterstock_307232705-1.jpg" alt="6">
+            <div class="carousel-caption">
+                <h3>Strive to Innovate</h3>
+                <p>We value passion, determination, perseverance, and innovation. We are inspired because we believe in what we are doing and where we are going. We believe in using innovation to remove obstacles and help you succeed.</p>
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="https://centricconsulting.com/wp-content/uploads/2018/07/Salesforce-column-1.jpg" alt="7">
+            <div class="carousel-caption">
+                <h3>Live a Balanced Life</h3>
+                <p>Our employees are our greatest asset. Because of that, we encourage our people to strive for balance in their life, and we monitor projects to ensure our employees have time for family, community and personal interests.</p>
+            </div>
+        </div>
+
+
+
+
+
+
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
+</div>
+
+
 
 <div class="row">
     <div class="col-md-4">
