--- a/Views/UserData/Index.cshtml
+++ b/Views/UserData/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@model IEnumerable<MIS4200_Team6.Models.UserData>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Employee Details";
 }
 
-<h2>Index</h2>
+<div class= "alert alert-info">
+<h2>Employee Details</h2>
+    </div>
 
 
 <table class="table">
