Added core values to database

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                     <li>@Html.ActionLink("Profile", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("User data", "Index", "UserData")</li>
+                    <li>@Html.ActionLink("Core Values", "Index", "CoreValues")</li>
+                    <li>@Html.ActionLink("Recognition", "Index", "Recognitions")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
