--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,17 +1,17 @@
 ﻿@{
-    ViewBag.Title = "The Contact";
+    ViewBag.Title = "Contact Centric";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    1020 Dennison Ave<br />
+    Columbus, OH 43201<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    614-205-8112
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Linkedin:</strong>   <a href="https://www.linkedin.com/company/centric-consulting/">https://www.linkedin.com/company/centric-consulting/</a><br />
+    <strong>Twitter:</strong> <a href="https://twitter.com/centric">https://twitter.com/centric</a>
 </address>
