--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("User data", "Index", "UserData")</li>
                     <li>@Html.ActionLink("Core Values", "Index", "CoreValues")</li>
-                    <li>@Html.ActionLink("Recognition", "Index", "Recognitions")</li>
+                    <li>@Html.ActionLink("Recognition", "Create", "Recognitions")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -45,5 +45,6 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+
 
 
