--- a/Views/Recognitions/Create.cshtml
+++ b/Views/Recognitions/Create.cshtml
@@ -24,7 +24,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ID, "ID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.ID, "ID", htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <div class="control-label col-md-2" style="text-emphasis;"> Recipient 
+            </div>
             <div class="col-md-10">
                 @Html.DropDownList("ID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
