--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -100,47 +100,7 @@
     </a>
 </div>
 
-<div class="box"></div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Commit to Delivery Excellence</h2>
-        <p>
-            We have a passion for consulting excellence. In all of our projects, we strive to first understand your needs and then deliver on our commitments 100 percent of the time.
-        </p>
-
-    </div>
-    <div class="col-md-4">
-        <h2>Embrace Integrity and Openness</h2>
-        <p>We value strong, positive relationships that are open and honest. This differentiates us and allows us to accomplish much more than we would be able to otherwise.</p>
-
-    </div>
-    <div class="col-md-4">
-        <h2>Practice Responsible Stewardship</h2>
-        <p>We value stewardship and fiscal accountability and always strive to do more with less. We guard and conserve company resources as if they were our own because it makes good business sense at all times, not just during lean times.</p>
-
-    </div>
-    <div class="col-md-4">
-        <h2>Invest in an Exceptional Culture</h2>
-        <p>We aim to hire and retain talented people from diverse backgrounds who can create a high impact for our clients and internally within our company.</p>
-    </div>
-    <div>
-        <div class="col-md-4">
-            <h2>Ignite Passion for the Greater Good</h2>
-            <p>We take pride in our commitment to improving the world in which we live and actively preserving our environment for future generations. We are steadfast in our devotion to the communities we serve and actively promote employee involvement in community improvement projects.</p>
-        </div>
-        <div>
-            <div class="col-md-4">
-                <h2>Strive to Innovate</h2>
-                <p>We value passion, determination, perseverance, and innovation. We are inspired because we believe in what we are doing and where we are going. We believe in using innovation to remove obstacles and help you succeed.</p>
-            </div>
-            <div>
-                <div class="col-md-4">
-                    <h2>Live a Balanced Life</h2>
-                    <p>Our employees are our greatest asset. Because of that, we encourage our people to strive for balance in their life, and we monitor projects to ensure our employees have time for family, community and personal interests.</p>
-                </div>
+<div class="well-sm"> <a href="https://centricconsulting.com/news-and-events-category/accolades/" class="btn btn-primary btn-lg"> Learn more about the core values </a></div>
 
 
-            </div>
 
-        </div>
