Made changes to corevalue controller and view

--- a/Views/CoreValues/Index.cshtml
+++ b/Views/CoreValues/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<MIS4200_Team6.Models.CoreValues>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Core Values";
 }
 
-<h2>Index</h2>
+<h2>Centric's 7 Core Values</h2>
 
 <p>
     
@@ -12,10 +12,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.CoreValue)
+            Core Value
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CVDesc)
+            Description
         </th>
         <th></th>
     </tr>
