--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -100,7 +100,7 @@
     </a>
 </div>
 
-<div class="well-sm"> <a href="https://centricconsulting.com/about-us/why-were-here/" class="btn btn-primary btn-lg"> Learn more about the core values </a></div>
+<div class="well-sm"> <a href="https://aspnet.cob.ohio.edu/mis4200Team6/CoreValues" class="btn btn-primary btn-lg"> Learn more about the core values </a></div>
 
 
 
