--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -10,6 +10,10 @@
     <h4>Change your account settings</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>Personal Information:</dt>
+        <dd>
+            @Html.ActionLink("Edit Information", "UserData")
+        </dd>
         <dt>Password:</dt>
         <dd>
             [
