--- a/Views/Recognitions/Create.cshtml
+++ b/Views/Recognitions/Create.cshtml
@@ -16,7 +16,7 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.CoreValueID, "CoreValueID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.CoreValueID, "Core Value", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CoreValueID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CoreValueID, "", new { @class = "text-danger" })
@@ -24,9 +24,7 @@
         </div>
 
         <div class="form-group">
-            @*@Html.LabelFor(model => model.ID, "ID", htmlAttributes: new { @class = "control-label col-md-2" })*@
-            <div class="control-label col-md-2" style="text-emphasis;"> Recipient 
-            </div>
+            @Html.LabelFor(model => model.ID, "Recipient", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("ID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
