--- a/Views/Recognitions/Index.cshtml
+++ b/Views/Recognitions/Index.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.corevalues.CoreValue)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.userdatas.firstName)
+            @Html.DisplayNameFor(model => model.userdatas.fullName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.RecDate)
@@ -35,7 +35,7 @@
             @Html.DisplayFor(modelItem => item.corevalues.CoreValue)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.userdatas.firstName)
+            @Html.DisplayFor(modelItem => item.userdatas.fullName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.RecDate)
