--- a/Views/Manage/Index.cshtml
+++ b/Views/Manage/Index.cshtml
@@ -12,7 +12,7 @@
     <dl class="dl-horizontal">
         <dt>Personal Information:</dt>
         <dd>
-            @Html.ActionLink("Edit Information", "UserData")
+            @Html.ActionLink("Edit", "Edit", "UserData")
         </dd>
         <dt>Password:</dt>
         <dd>
