--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNet.Identity
 @{
-    ViewBag.Title = User.Identity.GetUserId + "'s" + "Profile";
+    ViewBag.Title = User.Identity.GetUserName() + "'s" + "Profile";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
