--- a/Views/Recognitions/Create.cshtml
+++ b/Views/Recognitions/Create.cshtml
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.GiveID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.GiveID, new { htmlAttributes = new { @class = "form-control" } })
@@ -53,7 +53,7 @@
                 @Html.EditorFor(model => model.RecID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.RecID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
