--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    @*<li>@Html.ActionLink("User data", "Index", "UserData")</li>*@
+                    <li>@Html.ActionLink("Gamification", "Index", "Gamification")</li>
                     <li>@Html.ActionLink("Core Values", "Index", "CoreValues")</li>
                     <li>@Html.ActionLink("Recognize Your Colleagues", "Create", "Recognitions")</li>
                 </ul>
