--- a/Views/Recognitions/Create.cshtml
+++ b/Views/Recognitions/Create.cshtml
@@ -78,7 +78,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Cancel and Return Home", "Index", "Home")
 </div>
 
 @section Scripts {
