--- a/Views/UserData/Create.cshtml
+++ b/Views/UserData/Create.cshtml
@@ -64,7 +64,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @*@Html.ActionLink("Back to List", "Index")*@
 </div>
 
 @section Scripts {
