--- a/Views/Gamification/Index.cshtml
+++ b/Views/Gamification/Index.cshtml
@@ -7,15 +7,15 @@
 <h2>Index</h2>
 
 <p>
-    
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.userdatasGive.firstName)
+            @*@Html.DisplayNameFor(model => model.userdatasGive.firstName)*@
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.userdatasRec.firstName)
+            @Html.DisplayNameFor(model => model.userdatasRec.fullName)
         </th>
         <th>
             @*@Html.DisplayNameFor(model => model.ID)*@
