--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     @*<li>@Html.ActionLink("User data", "Index", "UserData")</li>*@
                     <li>@Html.ActionLink("Core Values", "Index", "CoreValues")</li>
                     <li>@Html.ActionLink("Recognize Your Colleagues", "Create", "Recognitions")</li>
+                    <li>@Html.ActionLink("Gamification", "Index", "Gamification")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
