--- a/Views/Recognitions/Index.cshtml
+++ b/Views/Recognitions/Index.cshtml
@@ -53,9 +53,9 @@
             @Html.DisplayFor(modelItem => item.CoreValueExtra)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.RecognitionID }) |
+           @* @Html.ActionLink("Edit", "Edit", new { id=item.RecognitionID }) |
             @Html.ActionLink("Details", "Details", new { id=item.RecognitionID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.RecognitionID })
+            @Html.ActionLink("Delete", "Delete", new { id=item.RecognitionID })*@
         </td>
     </tr>
 }
